// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LastSeedBackup should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 40,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
      }
    }
  >
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-Bold",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32,
        }
      }
    >
      last seed backup made:
    </PeachText>
  </View>
  <Button
    iconId="rotateCounterClockwise"
    onPress={[MockFunction]}
  >
    check seed words
  </Button>
</View>
`;

exports[`LastSeedBackup should render correctly with seedbackup date 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 40,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
      }
    }
  >
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-Bold",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32,
        }
      }
    >
      last seed backup made:
    </PeachText>
    <PeachText>
      01/09/2022 00:00
    </PeachText>
  </View>
  <Button
    iconId="rotateCounterClockwise"
    onPress={[MockFunction]}
  >
    check seed words
  </Button>
</View>
`;
